--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "Gaurav Jalkote",
+  "author": "Basava Chari Boppudi",
   "license": "MIT",
   "dependencies": {
     
